AC_PREREQ([2.69])
AC_INIT([cputemp], [0.1])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src])
#AC_CONFIG_HEADERS([include.h])
AM_INIT_AUTOMAKE([1.9 foreign subdir-objects])

AC_LANG([C])

# Checks for programs.
AM_PROG_AR
AM_PROG_AS

AC_HEADER_STDC
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
